<resources>
    <string name="app_name">Sliding Tile Puzzle</string>
    <string name="attributionText">The Android robot is reproduced or modified from work created and shared by Google and used according to terms described in the Creative Commons 3.0 Attribution License.</string>
    <string name="emptyTile">Empty tile</string>
    <string name="android00Text">Top left tile</string>
    <string name="android01Text">Top middle tile</string>
    <string name="android02Text">Top right tile</string>
    <string name="android10Text">Left tile</string>
    <string name="android11Text">Middle tile</string>
    <string name="android12Text">Right tile</string>
    <string name="android20Text">Bottom left tile</string>
    <string name="android21Text">Bottom middle tile</string>
    <string name="android22Text">Empty tile</string>
    <string name="errorCannotMove">That tile cannot be moved yet</string>
    <string name="errorCannotMoveEmpty">There is no tile there</string>
    <string name="errorNewPuzzle">You must start a new puzzle before moving the tiles</string>
    <string name="attributionUrl">https://developer.android.com/distribute/marketing-tools/brand-guidelines.html</string>
    <string name="time">Time</string>
    <string name="moves">Moves</string>
    <string name="difficultyItem">Difficulty</string>
    <string name="difficultyText">Select the difficulty level.</string>
    <string name="difficultyText1">Easy</string>
    <string name="difficultyText2">Medium</string>
    <string name="difficultyText3">Hard</string>
    <string name="settingsItem">Settings</string>
    <string name="settingsText">Settings</string>
    <string name="helpItem">Help</string>
    <string name="helpText">\
Tap a tile to slide it into the empty square; only tiles adjacent to the empty square may slide into it.
\n\nSlide the tiles around until they appear in proper order (with the empty tile placed in the bottom right).</string>
    <string name="aboutItem">About</string>
    <string name="aboutText">\
This <i>Sliding Tile Puzzle Version 1.1</i> application for Android™ was created by Raymond Lam
for the final project of <i>SCS2682: Mobile Applications for Android Devices</i>.
\n\nCopyright © 2017 Raymond Lam. All rights reserved.
\n\nNo part of this application, either code or image, may be used for any purpose other than to evaluate Raymond\'s programming style.
Therefore, any reproduction or modification by any means is strictly prohibited without prior written permission.</string>
    <string name="yayAttributionText">\
The yay sound was obtained from https://www.freesound.org/people/xtrgamr/sounds/239594/
and is used under the Creative Commons Attribution License (https://creativecommons.org/licenses/by/3.0/).</string>
    <string name="creditsItem">Credits</string>
    <string name="creditsText">Android robot by Google.
\n\nIntro music is Humoresque Op 101 No 7 by Antonín Dvořák.
\n\nYay sound by xtrgamr.</string>
    <string name="old_credits_ext">Android robot by Google.
\n\nIntro music by longzijun.
\n\nYay sound by xtrgamr.</string>
    <string name="play_history_easy">Easy Difficulty</string>
    <string name="play_history_medium">Medium Difficulty</string>
    <string name="play_history_hard">Hard Difficulty</string>
    <string name="solveHistoryTitle">Puzzle Solve History</string>
    <string name="dateTitle">Date/Time</string>
    <string name="elapsedTimeTitle">Solve Time</string>
    <string name="movesTitle">Moves</string>
    <string name="newPuzzleText">New Puzzle</string>
    <string name="puzzle_hasn_t_been_solved_yet">Puzzle hasn\'t been solved yet</string>
    <string name="splash_page">Splash page</string>
    <string name="congratulations_you_did_it">Congratulations! You did it!</string>
</resources>
