<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/difficultyItem"
            android:textSize="@dimen/titleSize"
            android:layout_margin="@dimen/titleMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/difficultyText"
            android:layout_marginTop="@dimen/titleMargin"
            android:layout_marginBottom="@dimen/titleMargin"
            android:layout_marginStart="@dimen/titleMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioGroup
            android:id="@+id/difficultyGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/difficulty1Button"
                android:text="@string/difficultyText1"
                android:layout_marginStart="@dimen/titleMargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/difficulty2Button"
                android:text="@string/difficultyText2"
                android:layout_marginStart="@dimen/titleMargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/difficulty3Button"
                android:text="@string/difficultyText3"
                android:layout_marginStart="@dimen/titleMargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>