<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:background="@color/white"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<android.support.percent.PercentRelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<ImageView
			android:id="@+id/tile00"
			android:src="@drawable/android00"
			android:contentDescription="@string/android00Text"
			android:layout_alignParentStart="true"
			android:adjustViewBounds="true"
			android:background="@drawable/customborder"
			android:scaleType="centerInside"
			android:layout_margin="@dimen/tileMargin"
			app:layout_widthPercent="33%"
			android:layout_height="wrap_content"/>
		<ImageView
			android:id="@+id/tile01"
			android:src="@drawable/android01"
			android:contentDescription="@string/android01Text"
			android:layout_toRightOf="@id/tile00"
			android:layout_alignBottom="@id/tile00"
			android:adjustViewBounds="true"
			android:background="@drawable/customborder"
			android:scaleType="centerInside"
			android:layout_margin="@dimen/tileMargin"
			app:layout_widthPercent="33%"
			android:layout_height="wrap_content"/>
		<ImageView
			android:id="@+id/tile02"
			android:src="@drawable/android02"
			android:contentDescription="@string/android02Text"
			android:layout_toRightOf="@id/tile01"
			android:layout_alignBottom="@id/tile01"
			android:adjustViewBounds="true"
			android:background="@drawable/customborder"
			android:scaleType="centerInside"
			android:layout_margin="@dimen/tileMargin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<ImageView
			android:id="@+id/tile10"
			android:src="@drawable/android10"
			android:contentDescription="@string/android10Text"
			android:layout_alignParentStart="true"
			android:layout_below="@id/tile00"
			android:adjustViewBounds="true"
			android:background="@drawable/customborder"
			android:scaleType="centerInside"
			android:layout_margin="@dimen/tileMargin"
			app:layout_widthPercent="33.5%"
			android:layout_height="wrap_content"/>
		<ImageView
			android:id="@+id/tile11"
			android:src="@drawable/android11"
			android:contentDescription="@string/android11Text"
			android:layout_toRightOf="@id/tile10"
			android:layout_below="@id/tile01"
			android:adjustViewBounds="true"
			android:background="@drawable/customborder"
			android:scaleType="centerInside"
			android:layout_margin="@dimen/tileMargin"
			app:layout_widthPercent="33.5%"
			android:layout_height="wrap_content"/>
		<ImageView
			android:id="@+id/tile12"
			android:src="@drawable/android12"
			android:contentDescription="@string/android12Text"
			android:layout_toRightOf="@id/tile11"
			android:layout_below="@id/tile02"
			android:adjustViewBounds="true"
			android:background="@drawable/customborder"
			android:scaleType="centerInside"
			android:layout_margin="@dimen/tileMargin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<ImageView
			android:id="@+id/tile20"
			android:src="@drawable/android20"
			android:contentDescription="@string/android20Text"
			android:layout_alignParentStart="true"
			android:layout_below="@id/tile10"
			android:adjustViewBounds="true"
			android:background="@drawable/customborder"
			android:scaleType="centerInside"
			android:layout_margin="@dimen/tileMargin"
			app:layout_widthPercent="33.5%"
			android:layout_height="wrap_content"/>
		<ImageView
			android:id="@+id/tile21"
			android:src="@drawable/android21"
			android:contentDescription="@string/android21Text"
			android:layout_toRightOf="@id/tile20"
			android:layout_below="@id/tile11"
			android:adjustViewBounds="true"
			android:background="@drawable/customborder"
			android:scaleType="centerInside"
			android:layout_margin="@dimen/tileMargin"
			app:layout_widthPercent="33.5%"
			android:layout_height="wrap_content"/>
		<ImageView
			android:id="@+id/tile22"
			android:src="@drawable/blank"
			android:contentDescription="@string/android22Text"
			android:layout_toRightOf="@id/tile21"
			android:layout_below="@id/tile12"
			android:adjustViewBounds="true"
			android:background="@drawable/customborder"
			android:scaleType="centerInside"
			android:layout_margin="@dimen/tileMargin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<TextView
			android:id="@+id/elapsedTime"
			android:layout_marginLeft="@dimen/tileMargin"
			android:layout_below="@id/tile20"
			android:layout_alignParentLeft="true"
			android:layout_centerVertical="true"
			android:layout_alignBaseline="@id/newPuzzle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<Button
			android:id="@+id/newPuzzle"
			android:text="@string/newPuzzleText"
			android:layout_below="@id/tile21"
			android:layout_centerHorizontal="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<TextView
			android:id="@+id/moves"
			android:layout_marginRight="@dimen/tileMargin"
			android:layout_below="@id/tile22"
			android:layout_alignParentRight="true"
			android:layout_alignBaseline="@id/newPuzzle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</android.support.percent.PercentRelativeLayout>
</ScrollView>