<?xml version="1.0" encoding="utf-8"?>
<net.ddns.raylam.sliding_puzzle.ui.history.HistoryLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/borderPadding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nothingText"
        android:text="@string/puzzle_hasn_t_been_solved_yet"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/titleLayout"
        android:orientation="horizontal"
        android:layout_margin="@dimen/tileMargin"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dateTitle"
            android:text="@string/dateTitle"
            android:layout_weight="1"
            android:layout_width="@dimen/dateCellWidth"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/elapsedTimeTitle"
            android:text="@string/elapsedTimeTitle"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_width="@dimen/elapsedTimeCellWidth"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/movesTitle"
            android:text="@string/movesTitle"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_width="@dimen/movesCellWidth"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_margin="@dimen/tileMargin"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</net.ddns.raylam.sliding_puzzle.ui.history.HistoryLayout>